# example-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: rust.yml
data/: postmaster.pid
data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841
data/base/5/: 1247  1249  1249_vm  1255  1255_fsm  1255_vm  1259  16388  16392  24596  24597  24599  24618  24619  24628  24629  24638  24646  24647  24654  24662  24675  24676  24683  24685  24698  2579  2604  2606  2608  2608_vm  2609  2609_vm  2610  2610_vm  2620  2656  2657  2658  2659  (+24 more)
data/global/: 1260  pg_control  pg_internal.init
migrations/2024-01-01-115712_create_users/: up.sql
migrations/2024-01-01-115726_create_follows/: up.sql
migrations/2024-01-01-115732_create_articles/: up.sql
migrations/2024-01-01-115738_create_tags/: up.sql
migrations/2024-01-01-115743_create_comments/: up.sql
migrations/2024-01-01-115751_create_favorites/: down.sql  up.sql
scripts/: wait-for-it.sh
src/: auth.rs  constants.rs  error.rs  main.rs  routes.rs  schema.rs
src/api/: mod.rs  profiles.rs  tags.rs  users.rs
src/api/articles/: mod.rs
src/app/: api.rs  mod.rs
src/app/article/: api.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
src/app/articles/: comments.rs  favorites.rs
src/app/comment/: api.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
src/app/tag/: api.rs  (+4 more)
src/articles/: mod.rs
src/middleware/: auth.rs  cors.rs  error.rs  mod.rs  state.rs
src/utils/: converter.rs  db.rs  hasher.rs  mod.rs  token.rs  uuid.rs
(+21 files in other folders)
