[package]
name = "example-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["r2d2", "postgres", "chrono", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
uuid = "1.6.1"
