[package]
name = "example-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3" }

diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono", "uuidv07", "serde_json"] }

jsonwebtoken = { version = "7" }

serde = { version = "1.0", features = ["derive"] }

serde_json = { version = "1.0" }

dotenv = "0.15.0"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "0.8", features = ["serde", "v4"] }

bcrypt = { version = "0.10.1" }

log = { version = "0.4.14" }

env_logger = "0.9.0"

anyhow = { version = "1.0" }

thiserror = { version = "1.0" }

futures = { version = "0.3" }

actix-service = { version = "1.0.6" }

actix-cors = { version = "0.5.4" }

convert_case = { version = "0.4.0"}
